Src/Newt/NewtonDynamics/Import/Newton.h

  #define dFloat double
  #define dFloat float
typedef struct NewtonBody{} NewtonBody;
typedef struct NewtonWorld{} NewtonWorld;
typedef struct NewtonJoint{} NewtonJoint;
typedef struct NewtonMaterial{} NewtonMaterial;
typedef struct NewtonCollision{} NewtonCollision;
typedef struct NewtonJointRecord NewtonJointRecord;
typedef struct NewtonHingeSliderUpdateDesc NewtonHingeSliderUpdateDesc;
typedef struct NewtonWorldConvexCastReturnInfo NewtonWorldConvexCastReturnInfo;
struct NewtonJointRecord
{
  dFloat m_attachmenMatrix_0[4][4];
  dFloat m_attachmenMatrix_1[4][4];
  dFloat m_minLinearDof[3];
  dFloat m_maxLinearDof[3];
  dFloat m_minAngularDof[3];
  dFloat m_maxAngularDof[3];
  const NewtonBody* m_attachBody_0;
  const NewtonBody* m_attachBody_1;
  dFloat m_extraParameters[16];
  int	m_bodiesCollisionOn;
  char m_descriptionType[32];
} ;
struct NewtonWorldConvexCastReturnInfo
{
  dFloat m_point[4];						// collision point in global space
  dFloat m_normal[4];						// surface normal at collision point in global space
  dFloat m_normalOnHitPoint[4];           // surface normal at the surface of the hit body,
  // is the same as the normal calculated by a ray cast hitting the body at the hit point
  dFloat m_penetration;                   // contact penetration at collision point
  int    m_contactID;	                    // collision ID at contact point
  const  NewtonBody* m_hitBody;			// body hit at contact point
};
struct NewtonHingeSliderUpdateDesc
{
  dFloat m_accel;
  dFloat m_minFriction;
  dFloat m_maxFriction;
  dFloat m_timestep;
} ;
// Newton callback functions
typedef void* (*NewtonAllocMemory) (int sizeInBytes);
typedef void (*NewtonFreeMemory) (void* const ptr, int sizeInBytes);
typedef void (*NewtonDestroyWorld) (const NewtonWorld* const newtonWorld);
typedef unsigned (*NewtonGetTicksCountCallback) ();
typedef int (*NewtonIslandUpdate) (const NewtonWorld* const newtonWorld, const void* islandHandle, int bodyCount);
typedef void (*NewtonBodyLeaveWorld) (const NewtonBody* const body, int threadIndex);
typedef void (*NewtonDestroyBodyByExeciveForce) (const NewtonBody* const body, const NewtonJoint* const contact);
typedef void (*NewtonCollisionDestructor) (const NewtonWorld* const newtonWorld, const NewtonCollision* const collision);
typedef int (*NewtonGetBuoyancyPlane) (const int collisionID, void* const context, const dFloat* const globalSpaceMatrix, dFloat* const globalSpacePlane);
typedef unsigned (*NewtonWorldRayPrefilterCallback)(const NewtonBody* const body, const NewtonCollision* const collision, void* const userData);
typedef dFloat (*NewtonWorldRayFilterCallback)(const NewtonBody* const body, const dFloat* const hitNormal, int collisionID, void* const userData, dFloat intersectParam);
typedef int  (*NewtonOnAABBOverlap) (const NewtonMaterial* const material, const NewtonBody* const body0, const NewtonBody* const body1, int threadIndex);
typedef void (*NewtonContactsProcess) (const NewtonJoint* const contact, dFloat timestep, int threadIndex);
typedef void (*NewtonBodyIterator) (const NewtonBody* const body, void* const userData);
typedef void (*NewtonJointIterator) (const NewtonJoint* const joint, void* const userData);
typedef void (*NewtonCollisionIterator) (void* const userData, int vertexCount, const dFloat* const faceArray, int faceId);
typedef void (*NewtonBallCallBack) (const NewtonJoint* const ball, dFloat timestep);
typedef unsigned (*NewtonHingeCallBack) (const NewtonJoint* const hinge, NewtonHingeSliderUpdateDesc* const desc);
typedef unsigned (*NewtonSliderCallBack) (const NewtonJoint* const slider, NewtonHingeSliderUpdateDesc* const desc);
typedef unsigned (*NewtonUniversalCallBack) (const NewtonJoint* const universal, NewtonHingeSliderUpdateDesc* const desc);
typedef unsigned (*NewtonCorkscrewCallBack) (const NewtonJoint* const corkscrew, NewtonHingeSliderUpdateDesc* const desc);
typedef void (*NewtonUserBilateralCallBack) (const NewtonJoint* const userJoint, dFloat timestep, int threadIndex);
typedef void (*NewtonUserBilateralGetInfoCallBack) (const NewtonJoint* const userJoint, NewtonJointRecord* const info);
typedef void (*NewtonConstraintDestructor) (const NewtonJoint*const  me);
// typedef void (*NewtonSetRagDollTransform) (const NewtonRagDollBone* const bone);
// typedef void (*NewtonBodyActivationState) (const NewtonBody* const body, unsigned state);
// typedef void (*NewtonVehicleTireUpdate) (const NewtonJoint* const vehicle, dFloat timestep);


// **********************************************************************************************
//
// world control functions
//
// **********************************************************************************************
NEWTON_API int NewtonWorldGetVersion ();
NEWTON_API int NewtonWorldFloatSize ();
NEWTON_API int NewtonGetMemoryUsed ();
NEWTON_API void NewtonSetMemorySystem (NewtonAllocMemory malloc, NewtonFreeMemory mfree);
NEWTON_API NewtonWorld* NewtonCreate ();
NEWTON_API void NewtonDestroy (const NewtonWorld* const newtonWorld);
NEWTON_API void NewtonDestroyAllBodies (const NewtonWorld* const newtonWorld);
NEWTON_API void NewtonUpdate (const NewtonWorld* const newtonWorld, dFloat timestep);
NEWTON_API void NewtonInvalidateCache (const NewtonWorld* const newtonWorld);
NEWTON_API void NewtonCollisionUpdate (const NewtonWorld* const newtonWorld);
NEWTON_API void NewtonSetSolverModel (const NewtonWorld* const newtonWorld, int model);
NEWTON_API void NewtonSetPlatformArchitecture (const NewtonWorld* const newtonWorld, int mode);
NEWTON_API int NewtonGetPlatformArchitecture(const NewtonWorld* const newtonWorld, char* description);
NEWTON_API void NewtonSetMultiThreadSolverOnSingleIsland (const NewtonWorld* const newtonWorld, int mode);
NEWTON_API int NewtonGetMultiThreadSolverOnSingleIsland (const NewtonWorld* const newtonWorld);
NEWTON_API void NewtonSetPerformanceClock (const NewtonWorld* const newtonWorld, NewtonGetTicksCountCallback callback);
NEWTON_API unsigned NewtonReadPerformanceTicks (const NewtonWorld* const newtonWorld, unsigned performanceEntry);
NEWTON_API unsigned NewtonReadThreadPerformanceTicks (const NewtonWorld* newtonWorld, unsigned threadIndex);
NEWTON_API void NewtonWorldCriticalSectionLock (const NewtonWorld* const newtonWorld);
NEWTON_API void NewtonWorldCriticalSectionUnlock (const NewtonWorld* const newtonWorld);
NEWTON_API void NewtonSetThreadsCount (const NewtonWorld* const newtonWorld, int threads);
NEWTON_API int NewtonGetThreadsCount(const NewtonWorld* const newtonWorld);
NEWTON_API int NewtonGetMaxThreadsCount(const NewtonWorld* const newtonWorld);
NEWTON_API void NewtonSetFrictionModel (const NewtonWorld* const newtonWorld, int model);
NEWTON_API void NewtonSetMinimumFrameRate (const NewtonWorld* const newtonWorld, dFloat frameRate);
NEWTON_API void NewtonSetBodyLeaveWorldEvent (const NewtonWorld* const newtonWorld, NewtonBodyLeaveWorld callback);
NEWTON_API void NewtonSetWorldSize (const NewtonWorld* const newtonWorld, const dFloat* const minPoint, const dFloat* const maxPoint);
NEWTON_API void NewtonSetIslandUpdateEvent (const NewtonWorld* const newtonWorld, NewtonIslandUpdate islandUpdate);
NEWTON_API void NewtonSetCollisionDestructor (const NewtonWorld* const newtonWorld, NewtonCollisionDestructor callback);
NEWTON_API void NewtonSetDestroyBodyByExeciveForce (const NewtonWorld* const newtonWorld, NewtonDestroyBodyByExeciveForce callback);
// NEWTON_API void NewtonWorldForEachBodyDo (const NewtonWorld* const newtonWorld, NewtonBodyIterator callback);
NEWTON_API void NewtonWorldForEachJointDo (const NewtonWorld* const newtonWorld, NewtonJointIterator callback, void* const userData);
NEWTON_API void NewtonWorldForEachBodyInAABBDo (const NewtonWorld* const newtonWorld, const dFloat* const p0, const dFloat* const p1, NewtonBodyIterator callback, void* const userData);
NEWTON_API void NewtonWorldSetUserData (const NewtonWorld* const newtonWorld, void* const userData);
NEWTON_API void* NewtonWorldGetUserData (const NewtonWorld* const newtonWorld);
NEWTON_API void NewtonWorldSetDestructorCallBack (const NewtonWorld* const newtonWorld, NewtonDestroyWorld destructor);
NEWTON_API NewtonDestroyWorld NewtonWorldGetDestructorCallBack (const NewtonWorld* const newtonWorld);
NEWTON_API void NewtonWorldRayCast (const NewtonWorld* const newtonWorld, const dFloat* const p0, const dFloat* const p1, NewtonWorldRayFilterCallback filter, void* const userData,
                  NewtonWorldRayPrefilterCallback prefilter);
NEWTON_API int NewtonWorldConvexCast (const NewtonWorld* const newtonWorld, const dFloat* const matrix, const dFloat* const target, const NewtonCollision* shape, dFloat* const hitParam, void* const userData,
                    NewtonWorldRayPrefilterCallback prefilter, NewtonWorldConvexCastReturnInfo* info, int maxContactsCount, int threadIndex);
// world utility functions
NEWTON_API int NewtonWorldGetBodyCount(const NewtonWorld* const newtonWorld);
NEWTON_API int NewtonWorldGetConstraintCount(const NewtonWorld* const newtonWorld);
// NEWTON_API int NewtonGetActiveBodiesCount();
// NEWTON_API int NewtonGetActiveConstraintsCount();
// NEWTON_API dFloat NewtonGetGlobalScale (const NewtonWorld* const newtonWorld);



// **********************************************************************************************
//
// Simulation islands
//
// **********************************************************************************************
NEWTON_API NewtonBody* NewtonIslandGetBody (const void* const island, int bodyIndex);
NEWTON_API void NewtonIslandGetBodyAABB (const void* const island, int bodyIndex, dFloat* const p0, dFloat* const p1);
// **********************************************************************************************
//
// Physics Material Section
//
// **********************************************************************************************
NEWTON_API int NewtonMaterialCreateGroupID(const NewtonWorld* const newtonWorld);
NEWTON_API int NewtonMaterialGetDefaultGroupID(const NewtonWorld* const newtonWorld);
NEWTON_API void NewtonMaterialDestroyAllGroupID(const NewtonWorld* const newtonWorld);