Src/Newt/NewtonDynamics_153/NewtonSource/bin/Newton_153.h

	typedef struct NewtonRagDollBone{} NewtonRagDollBone;
	typedef struct NewtonHingeSliderUpdateDescTag
	{
		dFloat m_accel;
		dFloat m_minFriction;
		dFloat m_maxFriction;
		dFloat m_timestep;
	} NewtonHingeSliderUpdateDesc;
	typedef void (*NewtonBodyActivationState) (const NewtonBody* body, unsigned state);
	typedef void (*NewtonSetRagDollTransform) (const NewtonRagDollBone* bone);
	typedef void (*NewtonVehicleTireUpdate) (const NewtonJoint* vehicle);