Src/Newt/NewtonDynamics/Import/DllImports.cs


		[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
		internal delegate int NewtonGetBuoyancyPlane(int collisionID, IntPtr context, [MarshalAs(UnmanagedType.LPArray, SizeConst = 16)]float[] globalSpaceMatrix, [MarshalAs(UnmanagedType.LPArray, SizeConst = 4)]float[] globalSpacePlane);

		[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
		internal delegate uint NewtonWorldRayPrefilterCallback(IntPtr body, IntPtr collision, IntPtr userData);

		[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
		internal delegate float NewtonWorldRayFilterCallback(IntPtr body, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] hitNormal, int collisionID, IntPtr userData, float intersectParam);


		[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
		internal delegate int NewtonOnAABBOverlap(IntPtr material, IntPtr body0, IntPtr body1, int threadIndex);

		[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
		internal delegate void NewtonContactsProcess(IntPtr contact, float timestep, int threadIndex);


		[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
		internal delegate void NewtonBodyIterator(IntPtr body, IntPtr userData);

		[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
		internal delegate void NewtonJointIterator(IntPtr joint, IntPtr userData);

		[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
		internal delegate void NewtonCollisionIterator(IntPtr userData, int vertexCount, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] faceArray, int faceId);

		[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
		internal delegate void NewtonBallCallBack(IntPtr ball, float timestep);

		[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
		internal delegate uint NewtonHingeCallBack(IntPtr hinge, [MarshalAs(UnmanagedType.LPStruct)]NewtonHingeSliderUpdateDesc desc);

		[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
		internal delegate uint NewtonSliderCallBack(IntPtr slider, [MarshalAs(UnmanagedType.LPStruct)]NewtonHingeSliderUpdateDesc desc);

		[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
		internal delegate uint NewtonUniversalCallBack(IntPtr universal, [MarshalAs(UnmanagedType.LPStruct)]NewtonHingeSliderUpdateDesc desc);

		[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
		internal delegate uint NewtonCorkscrewCallBack(IntPtr corkscrew, [MarshalAs(UnmanagedType.LPStruct)]NewtonHingeSliderUpdateDesc desc);


		[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
		internal delegate void NewtonUserBilateralCallBack(IntPtr userJoint, float timestep, int threadIndex);

		[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
		internal delegate void NewtonUserBilateralGetInfoCallBack(IntPtr userJoint, [MarshalAs(UnmanagedType.LPStruct)]NewtonJointRecord info);


		[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
		internal delegate void NewtonConstraintDestructor(IntPtr me);

		//	internal delegate void NewtonSetRagDollTransform(IntPtr bone);
		//	internal delegate void NewtonBodyActivationState(IntPtr  body, uint state);
		//	internal delegate void NewtonVehicleTireUpdate(IntPtr vehicle, dFloat timestep);

		#endregion

		#endregion

		#region World Control Functions

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern int NewtonWorldGetVersion();
		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern int NewtonWorldFloatSize();

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern int NewtonGetMemoryUsed();
		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonSetMemorySystem(NewtonAllocMemory malloc, NewtonFreeMemory mfree);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonCreate();
		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonDestroy(IntPtr newtonWorld);
		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonDestroyAllBodies(IntPtr newtonWorld);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonUpdate(IntPtr newtonWorld, float timestep);
		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonInvalidateCache(IntPtr newtonWorld);
		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonCollisionUpdate(IntPtr newtonWorld);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonSetSolverModel(IntPtr newtonWorld, int model);
		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonSetPlatformArchitecture(IntPtr newtonWorld, int mode);
		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern int NewtonGetPlatformArchitecture(IntPtr newtonWorld, [MarshalAs(UnmanagedType.LPArray, SizeConst = 256)]char[] description);
		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonSetMultiThreadSolverOnSingleIsland(IntPtr newtonWorld, int mode);
		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern int NewtonGetMultiThreadSolverOnSingleIsland(IntPtr newtonWorld);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonSetPerformanceClock(IntPtr newtonWorld, NewtonGetTicksCountCallback callback);
		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern uint NewtonReadPerformanceTicks(IntPtr newtonWorld, uint performanceEntry);
		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern uint NewtonReadThreadPerformanceTicks(IntPtr newtonWorld, uint threadIndex);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonWorldCriticalSectionLock(IntPtr newtonWorld);
		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonWorldCriticalSectionUnlock(IntPtr newtonWorld);
		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonSetThreadsCount(IntPtr newtonWorld, int threads);
		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern int NewtonGetThreadsCount(IntPtr newtonWorld);
		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern int NewtonGetMaxThreadsCount(IntPtr newtonWorld);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonSetFrictionModel(IntPtr newtonWorld, int model);
		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonSetMinimumFrameRate(IntPtr newtonWorld, float frameRate);
		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonSetBodyLeaveWorldEvent(IntPtr newtonWorld, NewtonBodyLeaveWorld callback);
		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonSetWorldSize(IntPtr newtonWorld, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] minPoint, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] maxPoint);
		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonSetIslandUpdateEvent(IntPtr newtonWorld, NewtonIslandUpdate islandUpdate);
		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonSetCollisionDestructor(IntPtr newtonWorld, NewtonCollisionDestructor callback);
		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonSetDestroyBodyByExeciveForce(IntPtr newtonWorld, NewtonDestroyBodyByExeciveForce callback);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonWorldForEachJointDo(IntPtr newtonWorld, NewtonJointIterator callback, IntPtr userData);
		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonWorldForEachBodyInAABBDo(IntPtr newtonWorld, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] p0, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] p1, NewtonBodyIterator callback, IntPtr userData);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonWorldSetUserData(IntPtr newtonWorld, IntPtr userData);
		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonWorldGetUserData(IntPtr newtonWorld);
		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonWorldSetDestructorCallBack(IntPtr newtonWorld, NewtonDestroyWorld destructor);
		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern NewtonDestroyWorld NewtonWorldGetDestructorCallBack(IntPtr newtonWorld);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonWorldRayCast(IntPtr newtonWorld, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] p0, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] p1, NewtonWorldRayFilterCallback filter, IntPtr userData, NewtonWorldRayPrefilterCallback prefilter);
		//NOTE:  I have no idea what hitParam is - dynamically sized array?  byref float? (which doesn't make sense, because it's dfloat* const hitParam)
		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern int NewtonWorldConvexCast(IntPtr newtonWorld, [MarshalAs(UnmanagedType.LPArray, SizeConst = 16)]float[] matrix, [MarshalAs(UnmanagedType.LPArray, SizeConst = 16)]float[] target, IntPtr shape, [MarshalAs(UnmanagedType.LPArray, SizeConst = 1)]float[] hitParam, IntPtr userData, NewtonWorldRayPrefilterCallback prefilter, IntPtr info, int maxContactsCount, int threadIndex);

		#endregion
		#region World Utility Functions

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern int NewtonWorldGetBodyCount(IntPtr newtonWorld);
		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern int NewtonWorldGetConstraintCount(IntPtr newtonWorld);

		#endregion

		#region Simulation islands

		//	More like a collision island (not sure why it's called simulation island)
		//	Just a fancy name for a group of bodies currently colliding

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonIslandGetBody(IntPtr island, int bodyIndex);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonIslandGetBodyAABB(IntPtr island, int bodyIndex, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] p0, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] p1);

		#endregion

		#region Physics Material

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern int NewtonMaterialCreateGroupID(IntPtr newtonWorld);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern int NewtonMaterialGetDefaultGroupID(IntPtr newtonWorld);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonMaterialDestroyAllGroupID(IntPtr newtonWorld);

